--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,26 @@
 <h1>Update Pet</h1>
 
+<h2>Edits for <%= @pet.name %></h2>
+
+<form action="/pets/<%= @pet.id %>" method="POST">
+    <input id="hidden" type="hidden" name="_method" value="patch">
+    <label>Edit the Pet's Name:</label>
+    <br>
+    <input type="text" name="pet[name]" value="<%= @pet.name %>">
+    
+    <br>
+
+  <label>Existing owner:</label><br></br>
+  <% @owners.each do |owner|%>
+    <input type="checkbox" name="pet[owner_id][]" id="<%= owner.id %>" value="<%= owner.id %>" <%='checked' if @pet.owners.include?(owner)%>><%= owner.name %></input>>br>
+  <% end %> 
+  <br>
+
+  <label>New Owner:</label><br></br>
+  <label>Owner Name:</label>
+    <input type="text" name="owner[name]" id="owner_name"></input>
+    <br></br>
+
+<input type="submit" value="Update Pet">
+</form>
 
